[gd_scene load_steps=2 format=3 uid="uid://cfk1t3qe38si4"]

[ext_resource type="Script" path="res://scripts/UI/Main/Options/sounds.gd" id="1_v2lqk"]

[node name="Sounds" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v2lqk")

[node name="Sound" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="Music" type="MarginContainer" parent="Sound"]
layout_mode = 2
theme_override_constants/margin_right = 100

[node name="HBoxContainer" type="HBoxContainer" parent="Sound/Music"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="Sound/Music/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_stretch_ratio = 0.2
text = "Musique
"

[node name="HSlider" type="HSlider" parent="Sound/Music/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
value = 100.0

[node name="Sfx" type="MarginContainer" parent="Sound"]
layout_mode = 2
theme_override_constants/margin_right = 100

[node name="HBoxContainer" type="HBoxContainer" parent="Sound/Sfx"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="Sound/Sfx/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_stretch_ratio = 0.2
text = "Effet"

[node name="HSlider" type="HSlider" parent="Sound/Sfx/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
value = 100.0

[node name="Entities" type="MarginContainer" parent="Sound"]
layout_mode = 2
theme_override_constants/margin_right = 100

[node name="HBoxContainer" type="HBoxContainer" parent="Sound/Entities"]
layout_mode = 2
size_flags_stretch_ratio = 4.0
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="Sound/Entities/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_stretch_ratio = 0.2
text = "Entit√©"

[node name="HSlider" type="HSlider" parent="Sound/Entities/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
value = 100.0

[connection signal="value_changed" from="Sound/Music/HBoxContainer/HSlider" to="." method="_on_music_value_changed"]
[connection signal="value_changed" from="Sound/Sfx/HBoxContainer/HSlider" to="." method="_on_sfx_value_changed"]
[connection signal="value_changed" from="Sound/Entities/HBoxContainer/HSlider" to="." method="_on_entities_value_changed"]
